# cobien_FrontEnd

./: .env.example  .gitignore  README.md
app/: .gitignore  LOGGING_AUDIT.md  app_config.py  black_overlay.py  compile_translations.py  config_runtime.py  config_store.py  contact_sync_service.py  device_heartbeat_service.py  device_log_sync_service.py  hardware_inventory.py  mainApp.py  mqtt_publisher.py  popup_style.py  proximity_sensors_reader.py  pyproject.toml  readme_app_english.md  readme_app_spanish.md  requirements.in  requirements.txt  startApp.py  translation.py  tts_service.py
app/audio/: audio_devices.py
app/board/: README.md  __init__.py  boardScreen.py  loadBoard.py
app/config/: config.default.json  config.local.example.json
app/contacts/: README.md  list_contacts.txt
app/events/: README.md  __init__.py  dayEventsScreen.py  event_bus.py  eventsScreen.py  loadEvents.py  morningEventSummary.py
app/face_authentication/: authentication_guest.py
app/icso_data/: README.md  imu_logger.py  log_writer.py  navigation_logger.py  notification_logger.py  proximity_sensor_logger.py  proximity_sensors_logger.py  sync_service.py  videocall_logger.py  wakeup_logger.py
app/jokes/: jokesScreen.py  jokes_fr.json
app/notifications/: README.md  __init__.py  mqtt_led_sender.py  notification_manager.py  notification_runtime.py
app/reminders/: README.md  reminders.py
app/settings/: README.md  audioScreen.py  buttonColorsScreen.py  jokeCategoryScreen.py  languageScreen.py  launcherConfigScreen.py  logsScreen.py  notificationsScreen.py  pinCodeScreen.py  (+4 more)
(+204 files in other folders)
